# Learning-from-demonstration-LAT

./: .gitignore  README.md  bag2leatra.py  katana_gazebo_kdl.sh  robot_description  robot_description_wo_inertial  setRightsTty.sh
fake_or/: cmake_install.cmake  mainpage.dox  manifest.xml
fake_or/scripts/: fake_or_server.py
forward_kinematics_publisher/: CMakeLists.txt  cmake_install.cmake  mainpage.dox  manifest.xml
forward_kinematics_publisher/src/: for_kin_publisher.cpp
gazebo_object_tracker/: mainpage.dox  manifest.xml
gazebo_object_tracker/scripts/: gazebo_object_tracker.py
katana/: .cproject  .project  .pydevproject  cmake_install.cmake
katana/config/: katana_arm_controllers.yaml
katana/include/katana/: Katana.h  Katana300.h
katana/src/: Katana300.cpp  joint_trajectory_action_controller.cpp
katana300_workaround/: .cproject  .project  .pydevproject  cmake_install.cmake  mainpage.dox  manifest.xml
katana300_workaround/src/: katana300_workaround.cpp
ros_lfd_lat/: CMakeLists.txt  Doxyfile  cmake_install.cmake  mainpage.dox  manifest.xml
ros_lfd_lat/include/leatra/: draw.cc  draw.hh  dtw_leatra.cc  dtw_leatra.hh  kinematics.cc  kinematics.hh  leatra.cc  leatra.hh  lfd.cc  lfd.hh  litera.cc  litera.hh  stringhelp.cc  stringhelp.hh
ros_lfd_lat/include/ros_lfd_lat/: LatConstants.h  helpers.h  lat_learner.h  lat_reproducer.h
ros_lfd_lat/launch/: ar_track_bundle.launch  ar_track_bundle_kinect.launch  lat_reproducer.launch  lfd_kate.launch  lfd_scenario.launch
ros_lfd_lat/meshes/: ikea_cup.stl
ros_lfd_lat/scripts/: lat_logger.py
ros_lfd_lat/src/: helpers.cpp  lat_learner.cpp  lat_learner.h  lat_reproducer.cpp  lat_reproducer.h
ros_lfd_lat/src/leatra/: draw.cc  draw.hh  dtw2.cc  dtw2.hh  dtw_leatra.cc  kinematics.cc  leatra.cc  (+7 more)
ros_lfd_lat/test/: ndmaptest.cpp  reprotest.cpp
ros_lfd_lat/urdf/: ikea_cup.urdf
